--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ Options -Indexes
 </FilesMatch>
 <IfModule mod_rewrite.c >
     RewriteEngine On
-    RewriteBase /TpFinal/
+    RewriteBase /tpfinal/
     RewriteRule ^(public)($|/) - [L,NC]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
